--- a/post.html
+++ b/post.html
@@ -170,7 +170,7 @@
            </div>
            <div class="col-sm-12 col-md-4 col-lg-4 featured-stories">
                <div class="most-viewed-title">
-                   <h2 style="color: #444444;">Featured stories</h2>
+                   <h2 style="color: #444444;">Most Viewed Stories</h2>
                </div>
                <div class="most-viewed-item">
                    <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
@@ -251,8 +251,8 @@
                <div class="most-viewed-item">
                    <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
                    <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
-                   </p>
+                        Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
+                    </p>
                    <div class="most-viewed-bottom">
                        <div class="most-viewed-bottom-left">
                            <i class="fa fa-heart" aria-hidden="true"></i>
@@ -270,8 +270,8 @@
                <div class="most-viewed-item">
                    <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
                    <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data. Snap has also announced a geography-specific
-                   </p>
+                        Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
+                    </p>
                    <div class="most-viewed-bottom">
                        <div class="most-viewed-bottom-left">
                            <i class="fa fa-heart" aria-hidden="true"></i>
@@ -305,45 +305,27 @@
                        </div>
                    </div>
                </div>
-               <div class="most-viewed-item">
-                   <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>20h ago</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>20h ago</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
            </div>
+           <div class="col-sm-12 col-md-6 col-lg-4 featured-stories">
+                <div class="footer-title subscribe">
+                    <span>Subscribe to our mailing list</span>
+                </div>
+                <div class="footer-subscribe">
+                    <div class="footer-subscribe-block1" style="margin-bottom: 16px;">
+                        <span>Yes, send me daily emails with Apple news!</span>
+                    </div>
+                    <div class="footer-subscribe-block3" style="display: flex">
+                        <input type="checkbox" style="margin-right: 10px" checked>
+                        <span style="display: flex; align-items: center">I agree to terms and conditions. </span>
+                    </div>
+                    <div class="footer-subscribe-block2">
+                        <input type="email" placeholder="Email Address">
+                    </div>
+                    <div>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
        </div>
 
        <div class="container">
@@ -383,6 +365,23 @@
                    </div>
                </div>
                <hr>
+               <div class="col-sm-12 col-md-12 col-lg-11 col-lg-offset-1">
+                   <div class="response">
+                       <div class="col-sm-4 col-md-4 col-lg-2">
+                           <img src="images/toa-heftiba-i1eYU8DTR5U-unsplash@2x.png" width="90%">
+                       </div>
+                       <div class="col-sm-8 col-md-8 col-lg-10">
+                           <p class="name">Name Surname</p>
+                           <p class="date">4 days ago</p>
+                           <p style="margin-bottom: 0">
+                               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                               At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                               Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                           </p>
+                           <p class="replay"><i class="fa fa-reply" aria-hidden="true" style="margin-right: 8px; font-size: 16px;"></i> Reply</p>
+                       </div>
+                   </div>
+               </div>
            </div>
        </div>
        <div class="container">
@@ -521,7 +520,7 @@
                </div>
            </div>
        </div>
-       <div class="container">
+       <!-- <div class="container">
            <div class="col-sm-12 col-md-12 col-lg-12" style="padding-left: 0; padding-right: 0">
                <div class="comments-title">
                    <h3 style="margin-bottom: 32px">Sponsored</h3>
@@ -703,10 +702,10 @@
                    </div>
                </div>
            </div>
-       </div>
+       </div> -->
    </div>
 
-   <footer>
+   <!-- <footer>
        <div class="col-sm-12 col-md-12 col-lg-12 footer">
            <div class="container">
                <div class="row">
@@ -800,7 +799,7 @@
                <span>iPhone in Canada Blog</span>
            </div>
        </div>
-   </footer>
+   </footer> -->
 
    <script src="js/jquery.js"></script>
    <script src="js/bootstrap.min.js"></script>
