--- a/reviews.html
+++ b/reviews.html
@@ -366,128 +366,9 @@
                        </p>
                    </div>
                </div>
-               <div>
+               <!-- <div>
                    <button>LOAD MORE</button>
-               </div>
-           </div>
-           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed featured-stories" style="margin-top: 0; padding-left: 0">
-               <div class="most-viewed-title">
-                   <h2>Featured stories</h2>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data. Snap has also announced a geography-specific
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>June 16, 2020</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Costco Has Apple’s iTunes Cards on Sale: Save on Apps, Movie Rentals and More</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data. Snap has also announced a geography-specific
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>June 30, 2020</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data. Snap has also announced a geography-specific
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>20h ago</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>2h ago</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Tesla Model Y Delivered in Canada to Vancouver Store, Looks to Be the First [u]</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data.
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>20h ago</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
-               <div class="most-viewed-item">
-                   <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
-                   <p>
-                       Snap has also announced a geography-specific AR system that will turn public Snaps into spatial data. Snap has also announced a geography-specific
-                   </p>
-                   <div class="most-viewed-bottom">
-                       <div class="most-viewed-bottom-left">
-                           <i class="fa fa-heart" aria-hidden="true"></i>
-                           <span>609</span>
-                           <i class="fa fa-comments" aria-hidden="true"></i>
-                           <span>120</span>
-                           <i class="fa fa-clock-o" aria-hidden="true"></i>
-                           <span>June 16, 2020</span>
-                       </div>
-                       <div class="most-viewed-bottom-right">
-                           <span>SHARE</span>
-                       </div>
-                   </div>
-               </div>
+               </div> -->
            </div>
            <div class="col-sm-12 col-md-4 col-lg-4 most-viewed" style="margin-top: 10px">
                <div class="most-viewed-title">
@@ -539,10 +420,30 @@
                    </div>
                </div>
            </div>
+           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed featured-stories" style="margin-top: 40px; padding-left: 0">
+                <div class="footer-title subscribe">
+                    <span>Subscribe to our mailing list</span>
+                </div>
+                <div class="footer-subscribe">
+                    <div class="footer-subscribe-block1" style="margin-bottom: 16px;">
+                        <span>Yes, send me daily emails with Apple news!</span>
+                    </div>
+                    <div class="footer-subscribe-block3" style="display: flex">
+                        <input type="checkbox" style="margin-right: 10px" checked>
+                        <span style="display: flex; align-items: center">I agree to terms and conditions. </span>
+                    </div>
+                    <div class="footer-subscribe-block2">
+                        <input type="email" placeholder="Email Address">
+                    </div>
+                    <div>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
        </div>
    </div>
 
-   <footer>
+   <!-- <footer>
        <div class="col-sm-12 col-md-12 col-lg-12 footer">
            <div class="container">
                <div class="row">
@@ -636,7 +537,7 @@
                <span>iPhone in Canada Blog</span>
            </div>
        </div>
-   </footer>
+   </footer> -->
 
    <script src="js/jquery.js"></script>
    <script src="js/bootstrap.min.js"></script>
