--- a/review-post.html
+++ b/review-post.html
@@ -294,7 +294,7 @@
            </div>
            <div class="col-sm-12 col-md-4 col-lg-4 featured-stories">
                <div class="most-viewed-title">
-                   <h2 style="color: #444444;">Featured stories</h2>
+                   <h2 style="color: #444444;">Most Viewed Stories</h2>
                </div>
                <div class="most-viewed-item">
                    <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
@@ -449,85 +449,25 @@
                    </div>
                </div>
            </div>
-           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed" style="margin-top: 10px; padding: 0 15px">
-               <div class="most-viewed-title">
-                   <h2>More Posts</h2>
-               </div>
-               <div class="reviews-more-posts-item">
-                   <p class="trending-posts-text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
-                   </p>
-                   <div class="trending-posts-block-img">
-                       <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
-                   </div>
-                   <div class="trending-posts-block-text">
-                       <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                       <p>
-                           All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
-                       </p>
-                   </div>
-               </div>
-               <div class="reviews-more-posts-item">
-                   <p class="trending-posts-text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
-                   </p>
-                   <div class="trending-posts-block-img">
-                       <img src="images/kate-hliznitsova-tD0wyPbnsLA-unsplash@2x.png" width="100%">
-                   </div>
-                   <div class="trending-posts-block-text">
-                       <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                       <p>
-                           All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
-                       </p>
-                   </div>
-               </div>
-               <div class="reviews-more-posts-item">
-                   <p class="trending-posts-text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
-                   </p>
-                   <div class="trending-posts-block-img">
-                       <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
-                   </div>
-                   <div class="trending-posts-block-text">
-                       <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                       <p>
-                           All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
-                       </p>
-                   </div>
-               </div>
-               <div class="reviews-more-posts-item">
-                   <p class="trending-posts-text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
-                   </p>
-                   <div class="trending-posts-block-img">
-                       <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
-                   </div>
-                   <div class="trending-posts-block-text">
-                       <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                       <p>
-                           All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
-                       </p>
-                   </div>
-               </div>
-               <div class="reviews-more-posts-item">
-                   <p class="trending-posts-text-top">
-                       <i class="fa fa-clock-o" aria-hidden="true"></i>
-                       <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
-                   </p>
-                   <div class="trending-posts-block-img">
-                       <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
-                   </div>
-                   <div class="trending-posts-block-text">
-                       <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                       <p>
-                           All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
-                       </p>
-                   </div>
-               </div>
+           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed" style="margin-top: 0; padding: 0 15px">
+                <div class="footer-title subscribe">
+                    <span>Subscribe to our mailing list</span>
+                </div>
+                <div class="footer-subscribe">
+                    <div class="footer-subscribe-block1" style="margin-bottom: 16px;">
+                        <span>Yes, send me daily emails with Apple news!</span>
+                    </div>
+                    <div class="footer-subscribe-block3" style="display: flex">
+                        <input type="checkbox" style="margin-right: 10px" checked>
+                        <span style="display: flex; align-items: center">I agree to terms and conditions. </span>
+                    </div>
+                    <div class="footer-subscribe-block2">
+                        <input type="email" placeholder="Email Address">
+                    </div>
+                    <div>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
            </div>
        </div>
 
@@ -611,103 +551,121 @@
            </div>
        </div>
        <div class="container">
-           <div class="col-sm-12 col-md-12 col-lg-12" style="padding-left: 0; padding-right: 0">
-               <div style="margin-bottom: 32px" class="comments-title">
-                   <h3 style="margin-bottom: 32px">Sponsored</h3>
-               </div>
-               <div class="sponsored">
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/daniel-korpai-HyTwtsk8XqA-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-               </div>
-               <div class="sponsored">
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/pineapple-supply-co-qlYQb7B9vog-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-                   <div class="col-sm-12 col-md-6 col-lg-4">
-                       <div>
-                           <div class="trending-posts-block-img">
-                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
-                           </div>
-                           <div class="sponsored-block-text">
-                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
-                           </div>
-                           <p class="sponsored-text-bottom">
-                               <span class="text1">Learn It Wise</span>
-                               <span class="text2">Sponsored</span>
-                           </p>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
+            <div class="col-sm-12 col-md-12 col-lg-12" style="padding-left: 0; padding-right: 0">
+                <div class="comments-title">
+                    <h3 style="margin-bottom: 32px">More Posts</h3>
+                </div>
+                <div class="more-posts">
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">1h ago</span> <span class="text2">Gary NG</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/kate-hliznitsova-tD0wyPbnsLA-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-posts" style="margin-bottom: 56px">
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">Gary NG</span> <span class="text2">Steve Vegvari</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                        <div>
+                            <p class="more-posts-text-top">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                                <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                            </p>
+                            <div class="trending-posts-block-img">
+                                <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                            </div>
+                            <div class="trending-posts-block-text">
+                                <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                                <p>
+                                    All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
    </div>
 
-   <footer>
+   <!-- <footer>
        <div class="col-sm-12 col-md-12 col-lg-12 footer">
            <div class="container">
                <div class="row">
@@ -801,7 +759,7 @@
                <span>iPhone in Canada Blog</span>
            </div>
        </div>
-   </footer>
+   </footer> -->
 
    <script src="js/jquery.js"></script>
    <script src="js/bootstrap.min.js"></script>
